# housebot

./: README.md
Robot Belt/Confirm/: Confirm.xcf
Robot Belt/Haulted/: Haulted.xcf
Robot Belt/Left/: Left.xcf
Robot Belt/Null/: 0000.xcf
Robot Belt/Processing/: Stitching.xcf
Robot Belt/Right/: Right.xcf
Robot Ears/Confirm/: Confirm.xcf
Robot Ears/Haulted/RGB/: Haulted.xcf
Robot Ears/Processing/: Processing.xcf
Robot Ears/Wake/: Wake.xcf
Robot Eyes/Idle/: Idle.c  Idle2.c  Idle3.c  Idle4.c
createoi/: CMakeLists.txt  package.xml
createoi/includes/: createoi.h
createoi/src/: createoi.c  drive_node.cpp  driver.cpp  driver.h
gazebooMaps/MeekinsHome/: model.config  model.sdf
gazebooMaps/OutpostBasment/: model.config  model.sdf
housebot_display/: CMakeLists.txt  package.xml
housebot_display/firmware/: CMakeLists.txt  display.cpp
housebot_display/vega_belt/: vega_belt.ino
housebot_launch/: CMakeLists.txt  package.xml
housebot_launch/config/: vega4_base.yaml  vega4_scara_joints.yaml
housebot_launch/launch/: debug.launch  primary.launch  vega.launch
housebot_msgs/: CMakeLists.txt  package.xml
housebot_msgs/action/: PlayAudio.action
housebot_msgs/msg/: AudioData.msg  DrawCommand.msg~  DrawLayer.msg~
housebot_msgs/srv/: draw.srv~
scripts/: installMetal.sh  setup.sh
scripts/dev_env/: cloneDepends.sh  installDepends.sh
vagrant/: Vagrantfile  install_ros.sh  ros_bashrc.sh  vega_user_setup.sh
vega4_belt/: CMakeLists.txt  README.md  package.xml
vega4_belt/teensy/: CMakeLists.txt  belt.cpp  pololu_simple.cpp  pololu_simple.h
vega4_description/: CMakeLists.txt  package.xml
vega4_description/launch/: view_model.launch
vega4_description/meshes/: gantry_lower_link.stl  head_link.stl  jammer_elbow_link.stl  jammer_link.stl  jammer_shoulder_link.stl
vega4_description/rviz/: model.rviz
vega4_description/urdf/: vega4.urdf.xacro  vega4_standalone.urdf.xacro
vega4_head/: CMakeLists.txt  README.md  package.xml
vega4_head/teensy/: CMakeLists.txt  head.cpp
vega4_joint_state/: CMakeLists.txt  package.xml  setup.py
vega4_joint_state/scripts/: joint_state_publisher.py
vega4_msgs/: CMakeLists.txt  package.xml
