<?xml version="1.0"?>
<package>
  <name>vega4_belt</name>
  <version>0.0.1</version>
  <description>The housebot_display package</description>

  <maintainer email="alan@clnb.io">Alan Meekins</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>vega4_msgs</build_depend>
  <build_depend>ros_teensy</build_depend>
  <build_depend>rosserial_arduino</build_depend>
  <build_depend>rosserial_client</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>vega4_msgs</run_depend>
  <run_depend>ros_teensy</run_depend>
  <run_depend>rosserial_arduino</run_depend>
  <run_depend>rosserial_client</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
